--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/main/java/frc/molib"]
 	path = src/main/java/frc/molib
-	url = http:/github.com/BigMO314/2023_MOLib.git
+	url = https://github.com/BigMO314/2023_MOLib.git
